2007-08-08  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-default-fg, ps-default-bg): Docstring fix.
	(ps-begin-job): Use ps-default-fg and ps-default-bg only when
	ps-print-color-p is neither nil nor black-white.  Reported by Christian
	Schlauer <cs-muelleimer-rubbish.bin@arcor.de>.

2007-08-08  Andreas Schwab  <schwab@suse.de>

	* mail/mailabbrev.el (sendmail-pre-abbrev-expand-hook): Check for
	self-insert-command, not self-insert.

2007-08-08  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/eldoc.el (eldoc-get-fnsym-args-string): Make second
	argument optional, for backwards compatibility, and only highlight
	args when present.  Fix symbol name typo (doc/args).

	* help-mode.el (help-make-xrefs): Search for symbol constituents,
	rather than just `-'.

2007-08-07  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-units.el (calc-convert-temperature):
	Use `/' to create fractions.

2007-08-07  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-wrong-passwd-regexp): Make the regexp more
	global matching.
	(tramp-handle-shell-command): Handle OUTPUT-BUFFER and
	ERROR-BUFFER more robust.  Display output.
	(tramp-file-name-handler): Add a connection property when we found
	a foreign file name handler.  This allows backends like ftp to
	profit also from usr/host name completion based on connection
	cache.
	(tramp-send-command-and-read): Search for trash after the regexp
	until eol only.  In XEmacs, there is a problem with \n.

	* net/tramp-cache.el (top): Read persistent connection history
	when cache is empty.

2007-08-07  Nic Ferrier  <nferrier@tapsellferrier.co.uk>  (tiny change)

	* net/tramp.el (tramp-handle-process-file): Fix bug inserting
	resulting output.

2007-08-07  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-start): Pass nil as startfile
	to comint-exec.

2007-08-07  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-decoded): New variable.